templates/destinationrule-template.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: <service-name>
  namespace: <namespace>
spec:
  host: <service-name>
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http1MaxPendingRequests: 100
        maxRequestsPerConnection: 10
